deleted white spaces fixed font-sizes fixed button font-sizes and icon sizes removed main-section padding moved event classes out of the panel-group

--- a/src/wp-content/themes/viradacultural/less/main.less
+++ b/src/wp-content/themes/viradacultural/less/main.less
@@ -19,9 +19,10 @@
 @brand-primary:         @rosa;
 
 @body-bg: @gray-light;
-@text-color:            @gray-darker;
+@text-color: @gray-darker;
 @link-color: @rosa;
 @link-hover-color: @roxo;
+
 a:hover {
 	text-decoration: none;
 }
@@ -92,6 +93,8 @@ body.single, body.page, body.programacao-single {
 }
 
 @font-size-base:          16px;
+@font-size-large:         ceil((@font-size-base * 1.125)); // ~18px
+@font-size-small:         ceil((@font-size-base * 0.75)); // ~12px
 
 @font-size-h1:            floor((@font-size-base * 2.25)); // ~36px
 @font-size-h2:            floor((@font-size-base * 2)); // ~32px
@@ -173,13 +176,34 @@ img, body:not(.page-template-page-dez-anos-php) article.page img {
     font-size: 14px;
     line-height: 1.7143;
     .icon {
-        font-size: 16px;
+        font-size: @font-size-base;
         vertical-align: middle;
     }
     &:hover, &:active, &.active {
         background-color: @gray-lighter;
         box-shadow: none;
     }
+}
+
+.btn-lg {
+  // line-height: ensure even-numbered height of button next to large input
+  .button-size(@padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; @border-radius-large);
+  .icon {
+    font-size: @font-size-base;
+  }
+}
+.btn-sm {
+  // line-height: ensure proper height of button next to small input
+  .button-size(@padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; @border-radius-small);
+  .icon {
+    font-size: @font-size-small;
+  }
+}
+.btn-xs {
+  .button-size(@padding-xs-vertical; @padding-xs-horizontal; @font-size-small; @line-height-small; @border-radius-small);
+  .icon {
+    font-size: @font-size-small;
+  }
 }
 
 @btn-default-color:              @rosa;
@@ -504,6 +528,8 @@ img, body:not(.page-template-page-dez-anos-php) article.page img {
 	}
 }
 
+#main-section { padding: 0; }
+
 /* =Carousel
 -------------------------------------------------------------- */
 @carousel-indicator-border-color: @gray-lighter;
@@ -714,104 +740,6 @@ body.programacao {
 			}
 		}
 	}
-    .event {
-        .event-content {
-            h1 {
-                margin: 0;
-                font-size: 20px;
-            }
-
-            footer {
-                time {
-                    .secondary-font();
-                }
-            }
-
-        }
-
-
-    }
-	.event-grid {
-
-		float: left;
-		position: relative;
-		width: 18%;
-		height: 168px;
-		border-right: 1px solid @body-bg;
-		background-color: @gray-lighter;
-		.event-content {
-			position: absolute;
-			bottom: 0;
-			width: 100%;
-			height: 54px;
-            padding: 15px;
-            background-color: @rosa;
-            .transition(height linear .3s);
-			h1 {
-				display: none;
-                a {
-                    color: @roxo;
-                    .transition(color linear .3s); 
-                }
-			}
-            a {
-                color: @amarelo;
-            }
-			footer {
-				position: absolute;
-				left: 15px;
-				right: 15px;
-				bottom: 15px;
-                color: @amarelo;
-			}
-
-		}
-		&:hover {
-			.event-content {
-				height: 168px;
-                background-color: @roxo;
-				h1 {
-					display: block;
-                    a {
-                        color: @amarelo;
-                    }
-
-				}
-			}
-		}
-	}
-    .event-list {
-        border-bottom: 1px solid @body-bg;
-        background: #f5f5f5;
-        padding: 15px;
-        img {
-            float: left;
-            width: 10%;
-        }
-        .event-content {
-            width: 90%;
-            float: left;
-            h1 {
-                float: left;
-                width: 60%;
-                padding-left: 15px;
-            }
-            footer {
-                float: right;
-                width: 30%;
-                color: @verde;
-                border-left: 1px solid @gray-light;
-                padding-left: 15px;
-                .icon_star {
-                    color: @amarelo;
-                }
-            }
-        }
-        &:hover {
-            background: #fff;
-        }
-
-    }
 }
 
 #map-modal {
@@ -822,13 +750,105 @@ body.programacao {
         overflow: auto;
     }
 }
+.event {
+    .event-content {
+        h1 {
+            margin: 0;
+            font-size: 20px;
+        }
+        footer {
+            time {
+                .secondary-font();
+            }
+        }
+    }
+}
+.event-grid {
+    float: left;
+    position: relative;
+    width: 18%;
+    height: 168px;
+    border-right: 1px solid @body-bg;
+    background-color: @gray-lighter;
+    .event-content {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 54px;
+        padding: 15px;
+        background-color: @rosa;
+        .transition(height linear .3s);
+        h1 {
+            display: none;
+            a {
+                color: @roxo;
+                .transition(color linear .3s); 
+            }
+        }
+        a {
+            color: @amarelo;
+        }
+        footer {
+            position: absolute;
+            left: 15px;
+            right: 15px;
+            bottom: 15px;
+            color: @amarelo;
+        }
 
+    }
+    &:hover {
+        .event-content {
+            height: 168px;
+            background-color: @roxo;
+            h1 {
+                display: block;
+                a {
+                    color: @amarelo;
+                }
+
+            }
+        }
+    }
+}
+.event-list {
+    border-bottom: 1px solid @body-bg;
+    background: #f5f5f5;
+    padding: 15px;
+    img {
+        float: left;
+        width: 10%;
+    }
+    .event-content {
+        width: 90%;
+        float: left;
+        h1 {
+            float: left;
+            width: 60%;
+            padding-left: 15px;
+        }
+        footer {
+            float: right;
+            width: 30%;
+            color: @verde;
+            border-left: 1px solid @gray-light;
+            padding-left: 15px;
+            .icon_star {
+                color: @amarelo;
+            }
+        }
+    }
+    &:hover {
+        background: #fff;
+    }
+}
 .event-single {
-    width: 80%;
+    width: 70%;
     margin: 0 auto 48px;
     .servico {
         background: @gray-lighter;
         border-radius: @border-radius-base;
+        .box-shadow(0 1px 1px rgba(0,0,0,.2));
         font-family: @font-family-secondary;
         padding: 24px;
         margin-bottom: 24px;
